<resources>
    <string name="app_name">EazyShoppingList</string>
    <string name="list_name">List Name</string>
    <string name="add_item_button">Add Item</string>
    <string name="run_list_button">Go!</string>
    <string name="save_list_button">Save List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ItemInputName">Item name</string>
    <string name="item_name_hint">name of item</string>
    <string name="shopping_list_name_hint">shopping list name</string>
    <string name="item_unit_hint">price</string>
    <string name="ShoppingListsText">Saved Shopping Lists</string>
    <string name="add_list_button">Add a new List</string>
    <string name="delete_list_button">Delete</string>
    <string name="modify_item_button">Modify Item</string>
    <string name="saved_shopping_list">Shopping Lists</string>
    <string name="add_shopping_items">Shopping Items</string>
    <string name="go_shopping">Let\'s Go Shopping</string>
    <string name="about_text">About</string>
    <string name="about_text_detail">EazyShoppingList will make your shopping be a fun and will let you add items to your list anytime when you have an idea.\n\nAnd you can modify the list anytime!\n\nThe unique swiping to buy or delete will make your shopping so easy!</string>
    <string name="user_manual_text">User Manual</string>
    <string name="about_the_app">EazyShoppingList App</string>
    <string name="bought_menu_title">Bought</string>
    <string name="inlist_menu_title">In List</string>
    <string name="deleted_menu_title">Deleted</string>
</resources>