<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoppingListViewModel"
            type="com.zgz.shoppingitems.shoppinglist.ShoppingListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.zgz.todolistz.shoppinglist.ShoppingListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shopping_item_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/shopping_item_name_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listTitleText"
            app:layout_constraintVertical_bias="0.0"
            />

        <EditText
            android:id="@+id/listTitleText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/shopping_list_name_hint"
            android:inputType="textPersonName"
            android:text="@{shoppingListViewModel.currentShoppingList.listName}"
            app:layout_constraintEnd_toStartOf="@+id/save_list_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shopping_item_list"
            tools:text="@string/list_name" />

        <ImageView
            android:id="@+id/save_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/save_list_button"
            app:layout_constraintEnd_toStartOf="@+id/run_list_button"
            app:layout_constraintStart_toEndOf="@+id/listTitleText"
            app:layout_constraintBottom_toTopOf="@+id/shopping_item_list"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/save_24"
            app:tint="@color/colorAccent" />

        <ImageView
            android:id="@+id/run_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/run_list_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_list_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shopping_item_list"
            app:srcCompat="@drawable/shopping_cart_24"
            app:tint="@color/colorAccent"/>

        <EditText
            android:id="@+id/shopping_item_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="8"
            android:hint="@string/item_name_hint"

            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/importance_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopping_item_list" />

        <NumberPicker
            android:id="@+id/shopping_item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:clipToPadding="true"
            android:isScrollContainer="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layout_constraintBottom_toTopOf="@+id/importance_group"
            app:layout_constraintEnd_toStartOf="@+id/shopping_item_unit_edit"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toEndOf="@+id/shopping_item_name_edit"
            app:layout_constraintTop_toTopOf="@+id/shopping_item_name_edit" />

        <EditText
            android:id="@+id/shopping_item_unit_edit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="3"
            android:hint="@string/item_unit_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/importance_group"
            app:layout_constraintEnd_toStartOf="@+id/add_new_button"
            app:layout_constraintStart_toEndOf="@+id/shopping_item_amount"
            app:layout_constraintTop_toBottomOf="@+id/shopping_item_list" />

        <ImageView
            android:id="@+id/add_new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_item_button"
            app:layout_constraintBottom_toTopOf="@+id/importance_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopping_item_list"
            app:srcCompat="@drawable/add_circle_outline_24"
            app:tint="@color/colorAccent"
            />

        <RadioGroup
            android:id="@+id/importance_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopping_item_name_edit">

            <RadioButton
                android:id="@+id/radio_vimp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Very Important" />

            <RadioButton
                android:id="@+id/radio_imp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Important" />

            <RadioButton
                android:id="@+id/radio_norm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Normal" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>